--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyDANR7sMBIXr1xgHlwZieqARh05l17Wn9k",
-            authDomain: "ommalath-469ea.firebaseapp.com",
-            databaseURL: "https://ommalath-469ea-default-rtdb.europe-west1.firebasedatabase.app",
-            projectId: "ommalath-469ea",
-            storageBucket: "ommalath-469ea.firebasestorage.app",
-            messagingSenderId: "36334554434",
-            appId: "1:36334554434:web:3cfbdaba6a3f941e608cdb",
-            measurementId: "G-LBYBV0GV27"
+            apiKey: "AIzaSyA9lfQNMzI7-6P2GkskdJODE3yG-sVeAgg",
+            authDomain: "doctor-e941b.firebaseapp.com",
+            databaseURL: "https://doctor-e941b-default-rtdb.firebaseio.com",
+            projectId: "doctor-e941b",
+            storageBucket: "doctor-e941b.firebasestorage.app",
+            messagingSenderId: "702360631722",
+            appId: "1:702360631722:web:791c786562f43b3428d3d3",
+            measurementId: "G-6RY5P2T1CJ"
         };
 
         // Initialize Firebase
